Add title and H1

--- a/4.html
+++ b/4.html
@@ -2,11 +2,11 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Slide 4</title>
   </head>
   <body>
-    <p>
+    <h1>
       Partout où domine l'opportunité des prestations, les cadres doivent incentiver les directives chiffrables.
-    </p>
+    </h1>
   </body>
 </html>
