--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Pour défier la pluralité qualitative, il faut performer les axes mobilisateurs force de vente.</h1>
 
-  <img src="images/group-of-women-having-a-meeting.jpg" alt="Groupe de femmes inspirées lors d'une réunion mobilisation des forces de vente.">
-  
+  <p><img src="images/group-of-women-having-a-meeting.jpg" alt="Groupe de femmes inspirées lors d'une réunion mobilisation des forces de vente."></p>
+
 </body>
 </html>
