Modif des slides 1, 2, 3 pour test d'un nouveau push après Ré-installation de ma Virtual Box ;o) !

--- a/2.html
+++ b/2.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slide n°2</title>
 </head>
+
 <body>
+
   <h1>Pour défier la pluralité qualitative, il faut performer les axes mobilisateurs force de vente.</h1>
 
-  <p><img src="images/group-of-women-having-a-meeting.jpg" alt="Groupe de femmes inspirées lors d'une réunion mobilisation des forces de vente."></p>
+  <div style="text-align: center;">
+    <img  src="images/group-of-women-having-a-meeting.jpg" alt="Groupe de femmes inspirées lors d'une réunion mobilisation des forces de vente.">
+  </div>
 
 </body>
 </html>
