--- a/3.html
+++ b/3.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Slide n°3</title>
+</head>
 
-<h1>
-  En auditant la transversalité entrepreneuriale, voici notre conviction : segmenter les leaderships bénéfices.</h1>
+<body>
+  <h1>En auditant la transversalité entrepreneuriale, voici notre conviction : segmenter les leaderships bénéfices.</h1>
+
+</body>
+</html>
 
